--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -102,6 +102,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Jam"
+            android:inputType="number"
             >
         </com.google.android.material.textfield.TextInputEditText>
     </com.google.android.material.textfield.TextInputLayout>
@@ -112,7 +113,7 @@
         android:id="@+id/bt1"
         android:layout_gravity="center"
         android:text="pesan"
-        android:inputType="number"></Button>
+        ></Button>
 
 
 
